# bouyomi_schedule

./: .ai_rules_local.md  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  WIP_STATE.md  bouyomi_client.py  bouyomi_schedule.bat  build.bat  jenkinsfile  main.cpp  timer.py
BouyomiSchedule_v2.0/config/: sample_config.json
api/: bouyomi_client.cpp  bouyomi_client.h
config/: sample_config.json
core/: timer_manager.cpp  timer_manager.h  version.h.in
doc/: basic_design.md  detailed_design.md  requirements.md
tests/: live_test.cpp  test_main.cpp
ui/: mainwindow.cpp  mainwindow.h  timer_row_widget.cpp  timer_row_widget.h
